@@ -37,6 +37,8 @@ import static org.mockito.Mockito.when;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import org.hisp.dhis.common.CodeGenerator;
 import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.encryption.EncryptionStatus;
@@ -143,9 +145,7 @@ class AttributeValidatorTest {
   }
 
   @Test
-  void
-      shouldPassValidationWhenCreatingEnrollmentAndAttributeIsMandatoryAndValueIsNotPresentInPayloadButPresentInTE() {
-    // given 1 attribute has null value
+  void shouldPassValidationWhenCreatingEnrollmentAndMandatoryAttributeIsPresentOnlyInTE() {
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -153,7 +153,6 @@ class AttributeValidatorTest {
             .value("value")
             .build();
 
-    // when both tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -176,8 +175,8 @@ class AttributeValidatorTest {
   }
 
   @Test
-  void shouldPassValidationWhenUpdatingEnrollmentAndValueIsNotPresentAndAttributeIsMandatory() {
-    // given 1 attribute has null value
+  void
+      shouldReturnErrorWhenUpdatingEnrollmentAndMandatoryFieldIsNotPresentInEnrollmentOrInTrackedEntityOrInDB() {
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -185,7 +184,71 @@ class AttributeValidatorTest {
             .value("value")
             .build();
 
-    // when both tracked attributes are mandatory
+    when(program.getProgramAttributes())
+        .thenReturn(
+            Arrays.asList(
+                new ProgramTrackedEntityAttribute(program, trackedEntityAttribute, false, true),
+                new ProgramTrackedEntityAttribute(program, trackedEntityAttribute1, false, true)));
+
+    when(enrollment.getAttributes()).thenReturn(Collections.singletonList(attribute));
+    when(trackedEntity.getTrackedEntityAttributeValues()).thenReturn(Set.of());
+    when(preheat.getTrackedEntity(enrollment.getTrackedEntity())).thenReturn(trackedEntity);
+    bundle.setStrategy(enrollment, TrackerImportStrategy.UPDATE);
+
+    validator.validate(reporter, bundle, enrollment);
+
+    assertHasError(reporter, enrollment, ValidationCode.E1018);
+  }
+
+  @Test
+  void
+      shouldReturnNoErrorWhenUpdatingEnrollmentAndMandatoryFieldIsNotPresentInEnrollmentButPresentInTrackedEntity() {
+    Attribute attribute =
+        Attribute.builder()
+            .attribute(MetadataIdentifier.ofUid(trackedAttribute))
+            .valueType(ValueType.TEXT)
+            .value("value")
+            .build();
+
+    Attribute attribute1 =
+        Attribute.builder()
+            .attribute(MetadataIdentifier.ofUid(trackedAttribute1))
+            .valueType(ValueType.TEXT)
+            .value("value")
+            .build();
+
+    when(program.getProgramAttributes())
+        .thenReturn(
+            Arrays.asList(
+                new ProgramTrackedEntityAttribute(program, trackedEntityAttribute, false, true),
+                new ProgramTrackedEntityAttribute(program, trackedEntityAttribute1, false, true)));
+
+    when(enrollment.getAttributes()).thenReturn(Collections.singletonList(attribute));
+    when(trackedEntity.getTrackedEntityAttributeValues()).thenReturn(Set.of());
+    when(preheat.getTrackedEntity(enrollment.getTrackedEntity())).thenReturn(trackedEntity);
+    bundle.setStrategy(enrollment, TrackerImportStrategy.UPDATE);
+    bundle.setTrackedEntities(
+        List.of(
+            org.hisp.dhis.tracker.imports.domain.TrackedEntity.builder()
+                .trackedEntity(enrollment.getTrackedEntity())
+                .attributes(List.of(attribute, attribute1))
+                .build()));
+
+    validator.validate(reporter, bundle, enrollment);
+
+    assertNoErrors(reporter);
+  }
+
+  @Test
+  void
+      shouldReturnNoErrorWhenUpdatingEnrollmentAndMandatoryFieldIsNotPresentInEnrollmentButPresentInDB() {
+    Attribute attribute =
+        Attribute.builder()
+            .attribute(MetadataIdentifier.ofUid(trackedAttribute))
+            .valueType(ValueType.TEXT)
+            .value("value")
+            .build();
+
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -196,8 +259,9 @@ class AttributeValidatorTest {
     when(trackedEntity.getTrackedEntityAttributeValues())
         .thenReturn(
             new HashSet<>(
-                Collections.singletonList(
-                    new TrackedEntityAttributeValue(trackedEntityAttribute, trackedEntity))));
+                List.of(
+                    new TrackedEntityAttributeValue(trackedEntityAttribute, trackedEntity),
+                    new TrackedEntityAttributeValue(trackedEntityAttribute1, trackedEntity))));
     when(preheat.getTrackedEntity(enrollment.getTrackedEntity())).thenReturn(trackedEntity);
     bundle.setStrategy(enrollment, TrackerImportStrategy.UPDATE);
 
@@ -208,7 +272,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldFailValidationWhenCreatingEnrollmentAndValueIsNotPresentAndAttributeIsMandatory() {
-    // given 1 attribute has null value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -216,7 +279,6 @@ class AttributeValidatorTest {
             .value("value")
             .build();
 
-    // when both tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -239,7 +301,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldFailValidationWhenCreatingEnrollmentAndValueIsNullAndAttributeIsMandatory() {
-    // given 1 attribute has null value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -252,7 +313,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when both tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -276,7 +336,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldFailValidationWhenUpdatingEnrollmentAndValueIsNullAndAttributeIsMandatory() {
-    // given 1 attribute has null value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -289,7 +348,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when both tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -313,7 +371,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldPassValidationWhenValueIsNullAndAttributeIsNotMandatory() {
-    // given 1 attribute has null value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -326,7 +383,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when only 1 tracked attributes is mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -349,7 +405,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldFailValidationWhenValueIsInvalidPercentage() {
-    // given 1 percentage attribute has invalid value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -386,7 +441,6 @@ class AttributeValidatorTest {
   @Test
   void
       shouldFailValidationWhenCreatingEnrollmentAndValueIsNullAndAttributeIsMandatoryAndAttributeNotExistsInTei() {
-    // given 1 attribute has null value and does not exists in Te
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -399,7 +453,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when 2 tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -425,7 +478,6 @@ class AttributeValidatorTest {
   @Test
   void
       shouldFailValidationWhenUpdatingEnrollmentAndValueIsNullAndAttributeIsMandatoryAndAttributeNotExistsInTei() {
-    // given 1 attribute has null value and does not exists in Te
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -438,7 +490,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when 2 tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
